--- a/latihan4.html
+++ b/latihan4.html
@@ -5,7 +5,7 @@
     <meta name=""viewreport" content="width=device=width, initial-scale1">
     <title>MUSIC FEST</title>
 
-    <link rel="icon" href="/Ronaldo-Garena/fest.png" type="png">
+    <link rel="icon" href="/han/fest.png" type="png">
 </head>
 <head>
     <title>Latihan 4</title>
@@ -175,7 +175,7 @@
     <div class="container">
         <div class="left">
             <h2 style="text-align: center;">Feast</h2>
-            <p style="text-align: justify;"><img src="/Ronaldo-Garena/feast.jpg" style="float: left; margin-right: 10px;" width="300px" height="150px">Feast berdiri sejak 2013, beranggotakan Daniel Baskara Putra (vokal, synth), 
+            <p style="text-align: justify;"><img src="/han/feast.jpg" style="float: left; margin-right: 10px;" width="300px" height="150px">Feast berdiri sejak 2013, beranggotakan Daniel Baskara Putra (vokal, synth), 
                 Adnan Satyanugraha Putra (gitar), Dicky Renanda Putra (gitar), Fadli Fikriawan Wibowo (bass), dan Adrianus Aristo Haryo (drum). Mereka melalui jalur terjal di awal perjalanan kariernya, sebelum mulai mendapat perhatian pada 2017 lewat album penuh perdana, 
                 Multiverses. Ragam musik dalam album tersebut menjadi gambaran latar belakang dan referensi musik kelima personel yang berbeda-beda. Feast memiliki gagasan utama karya bernama ‘Earth’, konsep semesta fiktif yang merepresentasikan cerita nyata dalam karya mereka. 
                 Multiverses dan album terbaru Abdi Lara Insani (2022) adalah ‘Earth-03’, karikatur tentang konflik horizontal antar suku, agama, ras dan golongan di dunia nyata. Album pendek Beberapa orang Memaafkan (2018) adalah ‘Earth-02’, representasi asli dari dunia tempat kita tinggal. A
@@ -186,7 +186,7 @@
     <div class="divider"></div>
         <div class="right">
             <h2 style="text-align: center;">Fiersa Bersari</h2>
-            <p style="text-align: justify;"><img src="/Ronaldo-Garena/fiersa.jpg" style="float: right; margin-left: 10px;" width="300px" height="150px">Fiersa Besari merupakan seorang musisi dan penulis Indonesia. Lelaki kelahiran Bandung, 3 Maret 1984 itu telah menghasilkan 6 novel sebagai penulis dan menjadi salah satu pendiri Komunitas Pecinta Buku. 
+            <p style="text-align: justify;"><img src="/han/fiersa.jpg" style="float: right; margin-left: 10px;" width="300px" height="150px">Fiersa Besari merupakan seorang musisi dan penulis Indonesia. Lelaki kelahiran Bandung, 3 Maret 1984 itu telah menghasilkan 6 novel sebagai penulis dan menjadi salah satu pendiri Komunitas Pecinta Buku. 
                 Sebagai seorang pemusik, Fiersa memulai karirnya pada tahun 2009 sebagai seorang vokalis band indie. Ia giat merekam juga menyimpan karya musiknya, sampai pada 2012 memutuskan meluncurkan albumnya.
                 Di tahun 2009, Fiersa mulai membuat karya-karyanya berupa lagu dan album dan di tahun 2011 ia pun merilis sebuah album yang berjudul “11:11”. Album ini laris manis dan sukses di pasaran.</p>
 <div><iframe width="560" height="315" src="https://www.youtube.com/embed/1zGalAgnS0U?si=0sOO5J5GXrA2XX4d" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
